# claude-idea

./: .env.example  API_EXAMPLES.md  FINAL_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SLASH_COMMAND.md  create_user.sh  install.sh  mcp_config.example.json  pyproject.toml  requirements.txt  setup_slash_command.sh  test_connection.py
.claude/commands/: idea.md
chief-of-staff/: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chief-of-staff/cos/: __init__.py  config.py  db.py  main.py  models.py  router.py
chief-of-staff/tests/: __init__.py  test_models.py
idea_capture/: __init__.py  cli.py  config.py  db.py  mcp_server.py  models.py
